--- a/app/views/training_platform/share/_task_list.html.erb
+++ b/app/views/training_platform/share/_task_list.html.erb
@@ -5,7 +5,11 @@
     <hr class="my-line">
   </div>
 
+  <!-- 代办中任务 -->
   <h4 class="my-progress">待办中（<%= waits.size %>）</h4>
+  <% if waits.blank? %>
+    <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有待办中的任务"} %>
+  <% end %>
   <% waits.each do |task|%>
     <div class="row task-list-row">
       <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
@@ -22,8 +26,13 @@
       <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span class="business"><%= task.created_at.strftime("%F") %></span></div>
     </div>
   <%end%>
+  <!-- 代办中任务 -->
 
+  <!-- 进行中任务 -->
   <h4 class="my-progress">进行中（<%= dos.size %>）</h4>
+  <% if dos.blank? %>
+    <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有进行中的任务"} %>
+  <% end %>
   <% dos.each do |task|%>
     <div class="row task-list-row">
       <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
@@ -40,8 +49,14 @@
       <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span class="business"><%= task.created_at.strftime("%F") %></span></div>
     </div>
   <%end%>
+  <!-- 进行中任务 -->
 
+
+  <!-- 已完成任务 -->
   <h4 class="my-progress">已完成（<%= completes.size %>）</h4>
+  <% if completes.blank? %>
+    <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有已完成的任务"} %>
+  <% end %>
   <% completes.each do |task|%>
     <div class="row task-list-row">
       <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
@@ -60,8 +75,14 @@
       <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span class="business"><%= task.created_at.strftime("%F") %></span></div>
     </div>
   <%end%>
+  <!-- 已完成任务 -->
 
+
+  <!-- 验收通过任务 -->
   <h4 class="my-progress">验收通过（<%= acceprances.size %>）</h4>
+  <% if acceprances.blank? %>
+    <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有验收通过的任务"} %>
+  <% end %>
   <% acceprances.each do |task|%>
     <div class="row task-list-row">
       <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
@@ -80,4 +101,6 @@
       <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span class="business"><%= task.created_at.strftime("%F") %></span></div>
     </div>
   <%end%>
+  <!-- 验收通过任务 -->
+  
 </div>
