finish announces pages

--- a/app/assets/stylesheets/training_platform/announces.scss
+++ b/app/assets/stylesheets/training_platform/announces.scss
@@ -9,6 +9,11 @@
 	.anno-col{
 		padding: 0;
 	}
+	.anno-detail > a > span{
+		font-size: 16px;
+		color: #00CBD2;
+		line-height: 25px;
+	}
 	.announce-content{
 		p{
 			line-height: 40px;
