--- a/app/views/training_platform/announces/_form.html.erb
+++ b/app/views/training_platform/announces/_form.html.erb
@@ -1,5 +1,5 @@
-<h3 class="text-center title"><span>创建公告<span></h3>
-<%= simple_form_for(@announce, url: training_platform_project_announces_path(project_id: params[:project_id], id: @announce), remote: true, format: :js, wrapper: :horizontal_form_col210 ,html: {id: "projectFormModal", class: "form-horizontal"}) do |f| %>
+<h3 class="text-center title"><span><%= is_edit_or_update? ? "变更公告" : "创建公告" %><span></h3>
+<%= simple_form_for(@announce, url: is_edit_or_update? ? training_platform_project_announce_path(project_id: params[:project_id], id: @announce) : training_platform_project_announces_path(project_id: params[:project_id], id: @announce), remote: true, format: :js, wrapper: :horizontal_form_col210 ,html: {id: "projectFormModal", class: "form-horizontal"}) do |f| %>
 
 	<% if @announce.errors.any? %>
 		<div id="error_explanation">
