--- a/app/views/training_platform/announces/_show_announce.html.erb
+++ b/app/views/training_platform/announces/_show_announce.html.erb
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills nav-stacked anno-ul">
 	<li >
 		<span class="col-xs-9 text-left"><%= @announce.title %></span>
-		<span class="col-xs-3 text-right"><%= @announce.created_at.strftime("%F") %></span>
+		<span class="col-xs-3 text-right"><%= @announce.updated_at == @announce.created_at ? @announce.created_at.strftime("%F") : @announce.updated_at.strftime("%F") %></span>
 	</li>
 </ul>
 <div class="col-xs-12">
@@ -10,3 +10,6 @@
 		<p><%= @announce.description %></p>
 	</div>
 </div>
+<%= link_to(edit_training_platform_project_announce_path(project_id: params[:project_id], id: @announce), remote: true, format: :js) do %>
+	<span class="glyphicon glyphicon-edit pull-right"></span>
+<% end %>
