--- a/app/views/training_platform/announces/index.html.erb
+++ b/app/views/training_platform/announces/index.html.erb
@@ -48,18 +48,18 @@
 							</div>
 							<!-- 公告列表 -->
 							<div id="anno-index">
-								<%= render partial: "announces", location: {announces: @announces} %>
+								<%= render partial: "announces" %>
 							</div>
 						</div>
 
 						<div class="col-xs-6 ace_content_page_right">
 							<div class="my-task">
-								<h3>公告详情</h3>
+								<h3 class="clearfix">公告详情</h3>
 								<hr class="my-line">
 							</div>
 							<!-- 显示公告信息 -->
 							<div id="anno-show">
-								<%= render partial: 'show_announce', location: {announce: @announce} %>
+								<%= render partial: 'show_announce' %>
 							</div>
 						</div>
 						<!-- PAGE CONTENT ENDS -->
