--- a/app/views/training_platform/announces/show.js.erb
+++ b/app/views/training_platform/announces/show.js.erb
@@ -1,1 +1,1 @@
-$("#anno-show").html("<%= escape_javascript(render partial: 'show_announce', location: {announce: @announce})%>");
+$("#anno-show").html("<%= escape_javascript(render partial: 'show_announce' )%>");
