--- a/app/views/training_platform/share/_task_blank.html.erb
+++ b/app/views/training_platform/share/_task_blank.html.erb
@@ -1,4 +1,4 @@
-<div class="row task-list-row">
+<div class="row task-list-row no-hover">
   <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12 no-padding text-center">
     <%= info %>
   </div>
