--- a/app/views/training_platform/task_categories/show.html.erb
+++ b/app/views/training_platform/task_categories/show.html.erb
@@ -56,7 +56,7 @@
                 </div>
               </div>
 
-              <div class="row ace_content_page_right">
+              <div id="taskDetailShow" class="row ace_content_page_right">
                 <%= render partial: "training_platform/task_categories/detail"%>
               </div>
 
