--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -165,6 +165,13 @@
         text-indent: 2em;
       }
     }
+
+    .my-task{
+      .my-line{
+        border-color: #A4A4A4;
+        margin: 10px 0;
+      }
+    }
     
   }
 
