--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -1,8 +1,40 @@
-<div class="col-xs-12">
-  <div class="my-task">
-    <h3>任务详情</h3>
-    <hr class="my-line">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="my-task">
+        <h3>任务详情</h3>
+        <hr class="my-line">
+      </div>
+    </div>
   </div>
+
+  <div class="row task-ops">
+    <div class="col-xs-3 col-sm-2 col-lg-2 col-lg-2 no-padding dropdown">
+      <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        所属任务
+        <span class="caret my-caret"></span>
+      </button>
+      <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+        <li>待办中</li>
+        <li>进行中</li>
+        <li>验收通过</li>
+        <li>验收失败</li>
+      </ul>
+    </div>
+    <div class="col-xs-3 col-sm-2 col-lg-2 col-lg-2 no-padding dropdown">
+      <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        负责人
+        <span class="caret my-caret"></span>
+      </button>
+      <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+        <li>樊伟</li>
+        <li>张留刚</li>
+        <li>陈博</li>
+      </ul>
+    </div>
+  </div>
+
+  
   <div class="my-details">
     <div class="col-xs-2 dropdown">
       <botton class="my-btn my-black btn btn-default">所属任务</botton>
